@@ -559,6 +559,11 @@ reshapeBuffer(Buffer *buf)
     buf->height = LASTLINE + 1;
     if (buf->firstLine && sbuf.firstLine) {
 	int n;
+	buf->pos = sbuf.pos;
+	if (sbuf.currentLine)
+	    buf->pos += sbuf.currentLine->bpos;
+	while (sbuf.currentLine->bpos && sbuf.currentLine->prev)
+	    sbuf.currentLine = sbuf.currentLine->prev;
 	gotoRealLine(buf, sbuf.currentLine->real_linenumber);
 	n = (buf->currentLine->linenumber - buf->topLine->linenumber)
 	    - (sbuf.currentLine->linenumber - sbuf.topLine->linenumber);
@@ -566,8 +571,10 @@ reshapeBuffer(Buffer *buf)
 	    buf->topLine = lineSkip(buf, buf->topLine, n, FALSE);
 	    gotoRealLine(buf, sbuf.currentLine->real_linenumber);
 	}
-	buf->pos = sbuf.pos;
-	buf->currentColumn = sbuf.currentColumn;
+	if (FoldLine)
+	    buf->currentColumn = 0;
+	else
+	    buf->currentColumn = sbuf.currentColumn;
 	arrangeCursor(buf);
     }
     if (buf->check_url & CHK_URL)
