@@ -1,3 +1,11 @@
+2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03681] Re: fold patch
+	* buffer.c (reshapeBuffer): buf->pos, sbuf.currentLine fix
+				FoldLine
+	* display.c (arrangeCursor): buf->pos fix
+		(restorePosition): buf->pos fix	
+
 2003-01-24  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* NEWS: func: RESHAPE
